--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "react": "^16.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.0",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
+    "react-test-renderer": "^16.6.0",
     "redux": "^4.0.1"
   },
   "scripts": {
