--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.0",
